    * Kits for XHTML and Xpath added.  XHTML has a simple Preview Action.
    * Added Execute Script to JacaScript (can also be used for Groovy if Groovy
      Scripting support is installed properly).
    * Hotkeys for actions are displayed in Popup Menus
    * Word Completion action can also do CamelCase matches
    * Smart Home Action (and Smart Home Extend Selection)
Version 0.9.4 - IntelliSense additions
    * Adding IntelliSense to Java with simple List of selectable keywords
    * Added Toggle Comment Actions using Control SLASH
    * Fixed Issue 47.
    * Added Clojure, Scala, DOS Batch and 'nix bash support
    * Added Configurable Popup menus with default Tango Desktop icons
    * Added configurable format for the CaretMonitor class
    * Toggle Comments Action selects the lines affected after being performed
    * Added multi-line support in ActionUtils.insertMagicSTring method.
    * GotoLine dialog responds to ESC key
Version 0.9.3 - Start of scripts for the document:
    * Added new methods getLine() to SyntaxDocument
    * SyntaxDocument getIndexOf methods deprecated, use getMatchers instead
    * Added Line Numbering to Java
    * Added CaretMonitor Class
    * Merged Find And Replace dialogs into one.
    * Created SyntaxComponent interface and have all UI components implement
      that interface.  DefaultSyntaxKit will use config.properties class to
      dynamically install these components.
    * Added Right Margin option and Single Color Selection Options
    * Added Python, C and C++ Support
    * Added Ruby Syntax Support
    * Fixed Issue 37 (NPE for LineNumbersRuler)
    * Fixed Issue 39 (Highlighting Tokens overrides selection highlights)
    * Fixed some JavaDoc comments.
    * Fixed Line Numbers being displayed for the height of the editor and now
      just for the actual available lines.
    * Fixed Margin typo in all project. Issue 43
    * Changing Actions to be more configurable:
      * SyntaxActions renamed to ActionUtils